@@ -2,6 +2,7 @@ Version - 2.1 -
 -Changes to bin_timePaleoPhy and bin_cal3TimePaleoPhy so taxa not included in the tree are dropped before random dates are drawn from those intervals, which increases computation efficiency
 -New function perfectCharTree, for obtaining matrices of simulated parsimony informative characters on a topology
 -New function seqTimeList, which randomly searches a given timeList object with overlapping intervals for solutions which have fully sequential intervals
+-Added error message to timePaleoPhy to report an error if 'type' argument is not one of the listed options
 
 Version - 2.0 - 02-03-14
 -Changed parInit to use uniform distribution to randomly draw initial parameter values between bounds, rather than take mid value between bounds
